--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -15,6 +15,11 @@
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
 
                 </ul>
+                <ul class = 'nav navbar-nav mr-auto navbar-right'>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">Sign up</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">Login</a></li>
+
+                </ul>
             </div>
         </nav>
         <div class = 'container'>
