--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -16,8 +16,8 @@
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">Sign up</a></li>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">Login</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:signup'%}">Sign up</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:login'%}">Login</a></li>
 
                 </ul>
             </div>
