--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -3,7 +3,10 @@
     <div class = 'jumbotron'>
         <h1>WELCOME TO EMOTIONS PROJECT</h1>
         <h2>Please sign up or login to continue</h2>
-        <!-- <h1>{{text| upper}}</h1> -->
+        
+
+    </div>
+    <div class = 'container'>
 
     </div>
     {%endblock%}
