--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -1,9 +1,16 @@
 {% extends "basic_app/base.html" %}
     {% block body_block %}
-    <div class = 'jumbotron'>
+    <div class = 'container'>
         <h1>WELCOME TO EMOTIONS PROJECT</h1>
-        <h2>Please sign up or login to continue</h2>
-        
+        <!-- <h2>Please sign up or login to continue</h2> -->
+        <div class = 'container'>
+            <h2>Please fill in the form</h2>    
+            <form method = 'POST'>
+                {{form.as_p}}
+                {% csrf_token%}
+                <input type="submit" class = 'btn btn-primary' value = 'Submit'>
+            </form>
+        </div> 
 
     </div>
     <div class = 'container'>
