added current weather

--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -13,6 +13,7 @@
                     <li><a class='navbar-brand' href="{% url 'index'%}">FOODTRACKER</a></li>
                     <li><a class = 'navbar-link' href="{% url 'admin:index'%}">Admin</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:vis'%}">VISUALIZATION</a></li>
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
