added multiple choice

--- a/templates/basic_app/emotions.html
+++ b/templates/basic_app/emotions.html
@@ -12,6 +12,7 @@
                         <th>weather</th>
                         <th>event</th>
                         <th>emotions</th>
+                        <th>emotions degree</th>
                         <th>body reaction</th>
                         <th>thoughts</th>
                         <th>outcome</th>
@@ -22,6 +23,7 @@
                         <td>{{em.currentweather}}</td>
                         <td>{{em.event}}</td>
                         <td>{{em.emotions}}</td>
+                        <td>{{em.emotions_degree}}</td>
                         <td>{{em.body_reaction}}</td>
                         <td>{{em.thoughts}}</td>
                         <td>{{em.outcome}}</td>
