--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -11,7 +11,7 @@
             <div class = 'container'>
                 <ul class = 'nav navbar-nav'>
                     <li><a class='navbar-brand' href="{% url 'index'%}">FOODTRACKER</a></li>
-                    <li><a class = 'navbar-link' href="{% url 'admin:index'%}">Admin</a></li>
+                    <!-- <li><a class = 'navbar-link' href="{% url 'admin:index'%}">Admin</a></li> -->
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:vis'%}">VISUALIZATION</a></li>
 
