--- a/templates/basic_app/google_template.html
+++ b/templates/basic_app/google_template.html
@@ -47,6 +47,7 @@
                 <ul class = 'nav navbar-nav'>
                     <li><a class='navbar-brand' href="{% url 'index'%}">FOODTRACKER</a></li>
                     <!-- <li><a class = 'navbar-link' href="{% url 'admin:index'%}">Admin</a></li> -->
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions_form'%}">EMOTIONS FORM</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:vis'%}">CHARTS</a></li>
 
