changed multiple choice to choice

--- a/templates/basic_app/emotions.html
+++ b/templates/basic_app/emotions.html
@@ -20,7 +20,7 @@
                     {% for em in emotions_records %}
                     <tr>
                         <td>{{em.date}}</td>
-                        <td>{{em.currentweather}}</td>
+                        <td>{{em.current_weather}}</td>
                         <td>{{em.event}}</td>
                         <td>{{em.emotions}}</td>
                         <td>{{em.emotions_degree}}</td>
