--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -1,10 +1,23 @@
+{% load static%}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset = 'utf-8'>
         <title>My app</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'basic_app/css/mystyles.css'%}">
+        <style>
 
+            .myYellowText {
+                background-color: rgb(240, 240, 134);
+            }
+            .myRedText {
+                background-color: rgb(236, 78, 78);
+            }
+            .myBlueText {
+                background-color: rgb(117, 117, 236);
+            }
+        </style>   
     </head>
     <body>
         <nav class = 'navbar navbar-default navbar-static-top'>
