--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -8,15 +8,6 @@
         <link rel="stylesheet" href="{% static '/css/mystyles.css'%}">
         <style>
 
-            .myYellowText {
-                background-color: rgb(240, 240, 134);
-            }
-            .myRedText {
-                background-color: rgb(236, 78, 78);
-            }
-            .myBlueText {
-                background-color: rgb(117, 117, 236);
-            }
         </style>   
     </head>
     <body>
@@ -28,6 +19,7 @@
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions_form'%}">EMOTIONS FORM</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:vis'%}">CHARTS</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:stocks'%}">STOCKS</a></li>
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
