--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -1,7 +1,7 @@
 {% extends "basic_app/base.html" %}
     {% block body_block %}
     <div class = 'container'>
-        <h1>WELCOME TO MY FIRST PROJECT - EMOTIONS!</h1>
+        <h1>WELCOME TO EMOTIONS PROJECT</h1>
         <!-- <h2>Please sign up or login to continue</h2> -->
         <div class = 'container'>
             <h2>Random emotion of the day:</h2>    
