Added search for stocks and api to IEX cloud

--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -20,6 +20,7 @@
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:vis'%}">CHARTS</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:stocks'%}">STOCKS</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:add_stock'%}">ADD STOCK</a></li>
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
