--- a/templates/basic_app/stocks.html
+++ b/templates/basic_app/stocks.html
@@ -1,40 +1,97 @@
-{% extends "basic_app/base.html" %}
-    {% block body_block %}
-    <div class = 'container'>
-        <!-- <h2>Please sign up or login to continue</h2> -->
+{% load static%}
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset = 'utf-8'>
+        <title>My app</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static '/css/mystyles.css'%}">
+        <style>
+
+        </style>   
+    </head>
+    <body>
+        <nav class = 'navbar navbar-default navbar-static-top'>
+            <div class = 'container'>
+                <ul class = 'nav navbar-nav'>
+                    <li><a class='navbar-brand' href="{% url 'index'%}">FOODTRACKER</a></li>
+                    <!-- <li><a class = 'navbar-link' href="{% url 'admin:index'%}">Admin</a></li> -->
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions_form'%}">EMOTIONS FORM</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:vis'%}">CHARTS</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:stocks'%}">STOCKS</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:add_stock'%}">ADD STOCK</a></li>
+
+                </ul>
+
+                <ul class = 'nav navbar-nav mr-auto navbar-right'>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:signup'%}">Sign up</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:login'%}">Login</a></li>
+
+                </ul>
+                <form action = '{% url "basic_app:stocks"%}' class="navbar-form navbar-right" method = 'POST'>
+                    <div class="form-group">
+                        {% csrf_token%}
+                      <input type="text" class="form-control" placeholder="Get stock quote" name = "ticker">
+                    </div>
+                    <button type="submit" class="btn btn-default" name= 'searchTicker'>Submit</button>
+                </form>
+            </div>
+        </nav>
         <div class = 'container'>
-            {% if stocks_list%}
-            <table class = 'stocks' style="border: 1px solid">
-                <thead>
-                    <th style="border: 1px solid">date</th>
-                    <th style="border: 1px solid">AAPL</th>
-                    <th style="border: 1px solid">TSLA</th>
+            <!-- <h2>Please sign up or login to continue</h2> -->
+            <div class = 'container'>
+                <!-- {%if ticker%}
+                    {{ticker}}
+                {% endif%} -->
+                {% if api%}
+                <h1>{{api.companyName}}</h1><br>
+                Price $: {{api.latestPrice}} <br>
+                Previous close: {{api.previousClose}} <br>
+                Market cap: {{api.marketCap}} <br>
+                YTD Change: {{api.ytdChange}} <br>
+                Week 52 High: {{api.week52High}} <br>
+                Week 52 Low: {{api.week52Low}} <br>
+                <br>
+                {%for key,value in api.items%}
+                        {{key}}:{{value}} <br/>
+                    {%endfor%}
+                
+                {%endif%}
+                {{api}}
+                {% if stocks_list%}
+                <table class = 'stocks' style="border: 1px solid">
+                    <thead>
+                        <th style="border: 1px solid">date</th>
+                        <th style="border: 1px solid">AAPL</th>
+                        <th style="border: 1px solid">TSLA</th>
 
-                </thead>
-                {% for em in stocks_list %}
-                <tr>
-                    <td style="border: 1px solid">{{em.date}}</td>
-                    <td style="border: 1px solid">{{em.AAPL | floatformat:2}}</td>
-                    <td style="border: 1px solid">{{em.TSLA | floatformat:2}}</td>
+                    </thead>
+                    {% for em in stocks_list %}
+                    <tr>
+                        <td style="border: 1px solid">{{em.date}}</td>
+                        <td style="border: 1px solid">{{em.AAPL | floatformat:2}}</td>
+                        <td style="border: 1px solid">{{em.TSLA | floatformat:2}}</td>
 
-                </tr>
-                {% endfor%}
-            </table>
-                <form method = 'POST'>
-                    {% csrf_token%}
-                    <input type="submit" class = 'btn btn-success' value = 'Load stock prices' name = 'loadstocks'>
-                </form>
-                <form method = 'POST'>
-                    {% csrf_token%}
-                    <input type="submit" class = 'btn btn-danger' value = 'Delete' name = 'deletestocks'>
-                </form>
-            {% else %}
-                <p> No records</p>
-            {% endif%}
-        </div> 
+                    </tr>
+                    {% endfor%}
+                </table>
+                    <form method = 'POST'>
+                        {% csrf_token%}
+                        <input type="submit" class = 'btn btn-success' value = 'Load stock prices' name = 'loadstocks'>
+                    </form>
+                    <form method = 'POST'>
+                        {% csrf_token%}
+                        <input type="submit" class = 'btn btn-danger' value = 'Delete' name = 'deletestocks'>
+                    </form>
+                {% else %}
+                    <p> No records</p>
+                {% endif%}
+            </div> 
 
-    </div>
-    <div class = 'container'>
+        </div>
+        <div class = 'container'>
 
-    </div>
-    {%endblock%}
+        </div>
+    </body>
+</html>
