--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -13,6 +13,8 @@
                     {% csrf_token%}
                     <input type="submit" class = 'btn btn-success' value = 'Update'>
                 </form>
+                <h2>Psycological tests</h2>
+                <a href="basic_app/test_about_me">1. About me</a>
         </div> 
 
     </div>
