--- a/templates/basic_app/base.html
+++ b/templates/basic_app/base.html
@@ -24,25 +24,27 @@
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
-                    <li><a class = 'navbar-link' href="{% url 'signupuser'%}">Sign up</a></li>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:loginuser'%}">Login</a></li>
-
+                    <!-- <li><a class = 'navbar-link' href="{% url 'signupuser'%}">Sign up</a></li>
+                    <li><a class = 'navbar-link' href="{% url 'basic_app:loginuser'%}">Login</a></li> -->
+                    {% if user.is_authenticated%}
+                        
+                        <form action="{% url 'basic_app:logoutuser'%}" method ="POST">
+                            {% csrf_token %} 
+                            Logged in as {{user.username}}&nbsp;
+                            <button type = "submit" class = 'btn btn-default'>Logout</button>
+        
+                        </form>
+                    
+                    {%else%}
+                        <li><a href="{% url 'signupuser'%}">Sign up</a></li>
+                        <li><a href="{% url 'basic_app:loginuser'%}">Login</a></li>
+        
+                    {% endif%}
                 </ul>
             </div>
         </nav>
         <div class = 'container'>
-            {% if user.is_authenticated%}
-                Logged in as {{user.username}}
-                <form action="{% url 'basic_app:logoutuser'%}" method ="POST">
-                    {% csrf_token %}
-                    <button type = "submit">Logout</button>
 
-                </form>
-            {%else%}
-            <a href="{% url 'signupuser'%}">Sign up</a>
-            <a href="{% url 'basic_app:loginuser'%}">Login</a>
-
-            {% endif%}
             {% block body_block%}
             <!-- Anything outside of this will be inherited -->
             {% endblock%}
