--- a/templates/basic_app/google_template.html
+++ b/templates/basic_app/google_template.html
@@ -245,9 +245,19 @@
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:signup'%}">Sign up</a></li>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:login'%}">Login</a></li>
-
+                    {% if user.is_authenticated%}
+                        
+                        <form action="{% url 'basic_app:logoutuser'%}" method ="POST">
+                            {% csrf_token %} 
+                            Logged in as {{user.username}}&nbsp;
+                            <button type = "submit" class = 'btn btn-default'>Logout</button>
+        
+                        </form>
+                    {%else%}
+                        <li><a href="{% url 'signupuser'%}">Sign up</a></li>
+                        <li><a href="{% url 'basic_app:loginuser'%}">Login</a></li>
+        
+                    {% endif%}
                 </ul>
             </div>
         </nav>
@@ -259,6 +269,7 @@
     <!-- <div id="donutchart"></div> -->
     <!--Table and divs that hold the pie charts-->
     <div class = 'container'>
+        <h2>{{error}}</h2>
     <table class="columns">
         <tr>
           <td><div id="donutchart" style="border: 1px solid #ccc"></div></td>
