--- a/templates/basic_app/test_about_me.html
+++ b/templates/basic_app/test_about_me.html
@@ -31,9 +31,20 @@
 
                 </ul>
                 <ul class = 'nav navbar-nav mr-auto navbar-right'>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:signup'%}">Sign up</a></li>
-                    <li><a class = 'navbar-link' href="{% url 'basic_app:login'%}">Login</a></li>
-
+                    {% if user.is_authenticated%}
+                        
+                        <form action="{% url 'basic_app:logoutuser'%}" method ="POST">
+                            {% csrf_token %} 
+                            Logged in as {{user.username}}&nbsp;
+                            <button type = "submit" class = 'btn btn-default'>Logout</button>
+        
+                        </form>
+                    
+                    {%else%}
+                        <li><a href="{% url 'signupuser'%}">Sign up</a></li>
+                        <li><a href="{% url 'basic_app:loginuser'%}">Login</a></li>
+        
+                    {% endif%}
                 </ul>
             </div>
         </nav>
