--- a/templates/basic_app/index.html
+++ b/templates/basic_app/index.html
@@ -14,7 +14,7 @@
                     <input type="submit" class = 'btn btn-success' value = 'Update'>
                 </form>
                 <h2>Psychological tests</h2>
-                <a href="basic_app/test_about_me">1. About me</a>
+                <a href="{% url 'basic_app:about_me'%}">1. About me</a>
         </div> 
 
     </div>
