--- a/templates/basic_app/test_about_me.html
+++ b/templates/basic_app/test_about_me.html
@@ -21,7 +21,7 @@
         <nav class = 'navbar navbar-default navbar-static-top'>
             <div class = 'container'>
                 <ul class = 'nav navbar-nav'>
-                    <li><a class='navbar-brand' href="{% url 'index'%}">FOODTRACKER</a></li>
+                    <li><a class='navbar-brand' href="{% url 'index'%}">EMOTIONSTRACKER</a></li>
                     <!-- <li><a class = 'navbar-link' href="{% url 'admin:index'%}">Admin</a></li> -->
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions_form'%}">EMOTIONS FORM</a></li>
                     <li><a class = 'navbar-link' href="{% url 'basic_app:emotions'%}">MY EMOTIONS</a></li>
