--- a/templates/basic_app/test_about_me.html
+++ b/templates/basic_app/test_about_me.html
@@ -3,13 +3,13 @@
 <html>
     <head>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NT8XWE6GKF"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-186369299-1"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-            gtag('config', 'G-NT8XWE6GKF');
+        gtag('config', 'UA-186369299-1');
         </script>
         <meta charset = 'utf-8'>
         <title>My app</title>
